$Id$

2008/01/16  GF_CHECK_EVENT added

2008/01/07  Bugfix in gtgif.c (by Kawamura)
            Collapse bug for a long line corrected
            Link error on absoft compilers fixed

V3.99
2007/11/10  LINESC and LINESC2D added
            Bugs in POLY and LINES2D corrected (Thanks to Dr. Honda)

2007/07/31  recompile process of gsview corrected

2007/06/27  Fujistu compiler f95 and fcc supported for linux-64

2007/05/31  INTCLIP intrduced in cont1.f

V3.98
2006/09/21  Parameters introduced in A*.f
            Matrix size in A*.f reduced from 1000 to 300
            Adjust A3dcomm.inc if any trouble ocuurs
            Size of vector fonts reduced

V3.97
2006/08/01  arch/linux-ia64 added

V3.97
2006/07/24  gps.c: dvrgbtrg updated

2006/07/22  Argbfunc.f: R2Y2W, W2G2B, W2R2K, K2B2W, WRKBW, WRGBW added

2006/07/18  arch/macosx-gfortran added
            arch/macosx-g95 added

V3.96
2006/07/16  arch/macosxi-gfortran added
            arch/macosxi-g95 added
            arch/macosxi-ifc added
            A3dplot.f minor error corrected
            Acplot1.f array allocation error corrected
            Aline3d.f minor modification

2006/04/19  arch/hp-nifs updated

V3.95
2006/02/08  gps.c fontname corrected (Thanks to Mr. Akutsu) 
2006/01/21  arch/nifs-sx/Makefile.arch update
2005/12/15  Makefiles: cp changed to cp -f

V3.94
2005/11/23  CONTG in cont2.f corrected (Thanks to Mr. Honda)

2005/11/12  CONTF in cont2.f corrected (Thanks to Mr. Kawamura)

V3.93
2005/10/27  CONTPF in cont3.f corrected (Thanks to Dr. Takeno)

2005/10/19  arch/sx-nisf/Makefile.arch corrected

2005/09/22  DVINQRES added
            demo/plasma.f, plasmax.f added

V3.92
2005/08/24  Image primitives:
            bsc4.f with GF_DEFIMAGE,GF_UNDEFIMAGE,GF_PUTIMAGE added
            imagetest.f added
            GU_XFLASH added

V3.91
2005/06/30  TICKS_PER_SECOND instead of CLK_TCK in unixc.c 

V3.90
2005/05/27  CLOCKS_PER_SEC instead of CLK_TCK in unixc.c 