@@ -1,0 +1,53 @@
+### $Id$ ###
+# Make for gsaf : V3.80 for Linux-g77-dynamic [2004/05/03]
+#################################################################
+
+# default install path
+
+BINPATH=/usr/local/bin
+LIBPATH=/usr/local/lib
+
+# home install path
+
+#HOMEPATH=/home/fukuyama
+#BINPATH=$(HOMEPATH)/bin
+#LIBPATH=$(HOMEPATH)/lib
+
+# Compiler command
+
+FC=g95
+CC=cc
+
+# Compile flags
+
+FLFLAGS=-O
+CLFLAGS=-O -DUNDERSCORE -DLSB
+FFLAGS=-O
+CFLAGS=-O -DUNDERSCORE -DLSB
+
+# Make library command and options
+
+LD=ld
+LDX=echo Created:
+LDFLAGS= -r -o
+
+# Library extension
+
+LIB-SUFFIX=-g95
+SL=$(LIB-SUFFIX).a
+
+# X library path
+
+XINCPATH=/usr/X11R6/include
+XLIBPATH=/usr/X11R6/lib
+XLIBS=$(XLIBPATH)/libX11$(SL)
+
+# Libraries for C mathematical functions in Fortran compile
+
+MLIBS=
+
+# Print command
+
+LP=lpr
+
+include ../Makefile.dynamic
